--- a/DLBind/pom.xml
+++ b/DLBind/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.zkoss.zk</groupId>
             <artifactId>zkbind</artifactId>
-            <version>${org.zkframework.version}-DATALITE</version>
+            <version>[${org.zkframework.version}.1-DATALITE,${org.zkframework.version}.100-DATALITE)</version>
         </dependency>
         
         <dependency>
